Only apply accessibility font scale factor when autosizing inflates

The accessibility font scale factor is currently applied to all text
that the text autosizer would inflate (this is changing in
crbug.com/645717). crrev.com/78fa050d9cc449bcd884a42850259054960d7e32 [formerly 1229b1414d64c314666d2fb3bf47706f2b5e947b]
introduced a bug where text that would not be inflated would become
inflated if text-size-adjust: none was applied.

This patch only applies the accessibility font scale factor if the
text autosizer would have inflated the text already. A new test,
AccessibilityFontScaleFactorWithTextSizeAdjustNone, has been added.
Other tests in TestAutosizerTest.cpp have been reformatted to 80cols.

BUG=666378

Review-Url: https://codereview.chromium.org/2514733005
Cr-Commit-Position: refs/heads/master@{#433757}

Former-commit-id: 394de7b0baa6b0136b6acfd15486de6a98e19152